[tool.poetry]
name = "bountyendpoints"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
pandas = "^1.4.1"
fuzzywuzzy = "^0.18.0"

[tool.poetry.dev-dependencies]
Flask = "^2.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
